--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,11 +3,14 @@
 
 body, html {
 	height: 100%;
-	background: linear-gradient(to bottom right, #EFF5FB, white);
-	padding-left: 10px;
 }
 
 .alert {
 	margin-bottom: 5;
 	padding: 5px;
+}
+
+.home {
+	padding-top: 150px;
+	text-align: center;
 }
