Added flash alerts and table styling for events

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,13 @@ body, html {
 	padding-top: 150px;
 	text-align: center;
 }
+
+.nav-buttons {
+
+}
+
+.alert {
+	background-color: #BBDEFA;
+	text-align: center;
+}
+
