--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,12 @@
-<div class="home">
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<div class="jumbotron">
+			  <h1>Waste Less</h1>
+			  <p>Donate your wedding leftovers. </br>No hassle, much help.</p>
+			  <p><a class="btn btn-primary btn-lg" href="../users/sign_up" role="button">Sign up now!</a></p>
+			</div>
 
-Hi
-
+		</div>
+	</div>
 </div>
