--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,37 +1,46 @@
-<h1>Listing events</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Date</th>
-      <th>End</th>
-      <th>Location</th>
-      <th>Instructions</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= event.name %></td>
-        <td><%= event.description %></td>
-        <td><%= event.date %></td>
-        <td><%= event.end %></td>
-        <td><%= event.location %></td>
-        <td><%= event.instructions %></td>
-        <td><%= event.user_id %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <h1>Find an upcoming event:</h1>
 
-<br>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Date</th>
+            <th>End</th>
+            <th>Location</th>
+            <th>Instructions</th>
+            <th>User</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<%= link_to 'New Event', new_event_path %>
+        <tbody>
+          <% @events.each do |event| %>
+            <tr>
+              <td><%= event.name %></td>
+              <td><%= event.description %></td>
+              <td><%= event.date %></td>
+              <td><%= event.end %></td>
+              <td><%= event.location %></td>
+              <td><%= event.instructions %></td>
+              <td><%= event.user_id %></td>
+              <td><%= link_to 'Show', event %></td>
+              <td><%= link_to 'Edit', edit_event_path(event) %></td>
+              <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+
+      <br>
+
+      <%= link_to 'New Event', new_event_path %>
+
+    </div>
+  </div>
+</div>
