--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,41 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="container">
+		<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+			<div class="navbar-header">
+      			<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+					<span class="icon-bar"></span>
+      			</button>
+      			<a href="../" class="navbar-brand">NoWeddingWaste</a>
+			</div>
+			<ul class="nav navbar-nav">
+	        	<li>
+	          		<a href="../about/">About</a>
+	        	</li>
+	      	</ul>
+			<% if user_signed_in? == false %>
+				<ul class="nav navbar-nav navbar-right">
+		        	<li><a href="/users/sign_in">Sign in</a></li>
+		        	<li><a href="/users/sign_up">Sign up</a></li>
+		      	</ul>
+	      	<% else %>
+		      	<ul class="nav navbar-nav navbar-right">
+		        	<li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+		      	</ul>
+	      	<% end %>
+	    </nav>
 
-	<p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    </div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<%= render partial: "shared/flash_messages", flash: flash %>
+			</div>
+		</div>
+	</div>
+
 
 <%= yield %>
 
