Updated views for events, styled tables and forms

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,7 @@ body, html {
 }
 
 .home {
-	padding-top: 150px;
+	margin-top: 150px;
 	text-align: center;
 }
 
@@ -24,3 +24,6 @@ body, html {
 	text-align: center;
 }
 
+.vert-offset {
+	margin-top: 100px;
+}
