--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,35 +11,35 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_area :name %>
+    <%= f.text_area :name, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :date %><br>
-    <%= f.date_select :date %>
+    <%= f.date_select :date, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :end %><br>
-    <%= f.time_select :end %>
+    <%= f.time_select :end, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :location %><br>
-    <%= f.text_area :location %>
+    <%= f.text_area :location, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :instructions %><br>
-    <%= f.text_area :instructions %>
+    <%= f.text_area :instructions, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.number_field :user_id, class: "form-control" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
