--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing event</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-<%= render 'form' %>
+		<h1>Editing event</h1>
 
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
+		<%= render 'form' %>
+
+		<%= link_to 'Show', @event %> |
+		<%= link_to 'Back', events_path %>
+  	</div>
+  </div>
+</div>
