--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,10 +15,6 @@ body, html {
 	text-align: center;
 }
 
-.nav-buttons {
-
-}
-
 .alert {
 	background-color: #BBDEFA;
 	text-align: center;
@@ -26,4 +22,12 @@ body, html {
 
 .vert-offset {
 	margin-top: 100px;
+}
+
+.collapse {
+	margin-bottom: 50px;
+	margin-left: 0px;
+	margin-right: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
 }
