--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -31,7 +31,8 @@
               <td><%= event.user_id %></td>
               <td><%= link_to 'Show', event %></td>
               <td><%= link_to 'Edit', edit_event_path(event) %></td>
-              <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <td nowrap="nowrap"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                <%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
           <% end %>
         </tbody>
