--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -11,33 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_area :name %>
+    <%= f.text_area :name, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :category_id %><br>
-    <%= f.number_field :category_id %>
+    <%= f.number_field :category_id, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :quantity %><br>
-    <%= f.number_field :quantity %>
+    <%= f.number_field :quantity, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :quantity_remaining %><br>
-    <%= f.number_field :quantity_remaining %>
+    <%= f.number_field :quantity_remaining, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :instructions %><br>
-    <%= f.text_area :instructions %>
+    <%= f.text_area :instructions, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :event_id %><br>
-    <%= f.number_field :event_id %>
+    <%= f.number_field :event_id, class: "form-control" %>
   </div>
   <div class="actions">
     <%= f.submit %>
