--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,37 +1,45 @@
-<h1>Listing items</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Category</th>
-      <th>Description</th>
-      <th>Quantity</th>
-      <th>Quantity remaining</th>
-      <th>Instructions</th>
-      <th>Event</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <h1>Listing items</h1>
 
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.name %></td>
-        <td><%= item.category_id %></td>
-        <td><%= item.description %></td>
-        <td><%= item.quantity %></td>
-        <td><%= item.quantity_remaining %></td>
-        <td><%= item.instructions %></td>
-        <td><%= item.event_id %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Description</th>
+            <th>Quantity</th>
+            <th>Quantity remaining</th>
+            <th>Instructions</th>
+            <th>Event</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<br>
+        <tbody>
+          <% @items.each do |item| %>
+            <tr>
+              <td><%= item.name %></td>
+              <td><%= item.category_id %></td>
+              <td><%= item.description %></td>
+              <td><%= item.quantity %></td>
+              <td><%= item.quantity_remaining %></td>
+              <td><%= item.instructions %></td>
+              <td><%= item.event_id %></td>
+              <td><%= link_to 'Show', item %></td>
+              <td><%= link_to 'Edit', edit_item_path(item) %></td>
+              <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
 
-<%= link_to 'New Item', new_item_path %>
+      <br>
+
+      <%= link_to 'New Item', new_item_path %>
+    
+    </div>
+  </div>
+</div>
