--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -35,10 +35,9 @@
     <%= f.label :instructions %><br>
     <%= f.text_area :instructions, class: "form-control" %>
   </div>
-  <div class="form-group">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id, class: "form-control" %>
-  </div>
+
+  <%= f.hidden_field :user_id, :value => current_user %>
+
   <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
   </div>
