--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,7 @@
 
       <h1>Find an upcoming event:</h1>
 
-      <table class="table table-hover">
+      <table class="table">
         <thead>
           <tr>
             <th>Name</th>
@@ -28,7 +28,7 @@
               <td><%= event.end %></td>
               <td><%= event.location %></td>
               <td><%= event.instructions %></td>
-              <td><%= event.user_id %></td>
+              <td><%= event.items.count %></td>
               <td><%= link_to 'Show', event %></td>
               <td><%= link_to 'Edit', edit_event_path(event) %></td>
               <td nowrap="nowrap"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
@@ -37,7 +37,6 @@
           <% end %>
         </tbody>
       </table>
-
       <br>
 
       <%= link_to 'New Event', new_event_path %>
