--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New event</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-<%= render 'form' %>
+		<h1>New event</h1>
 
-<%= link_to 'Back', events_path %>
+		<%= render 'form' %>
+
+		<%= link_to 'Back', events_path %>
+
+	</div>
+  </div>
+</div>
