--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,7 +13,7 @@
             <th>End Time</th>
             <th>Location</th>
             <th>Instructions</th>
-            <th>User</th>
+            <th>Items</th>
           </tr>
         </thead>
 
@@ -25,46 +25,43 @@
             <td><%= @event.end %></td>
             <td><%= @event.location %></td>
             <td><%= @event.instructions %></td>
-            <td><%= @event.user_id %></td>
+            <td><%= @event.items.count %></td>
           </tr>
         </body>
       </table>
 
 
-      <!-- <p>
-        <strong>Name:</strong>
-        <%= @event.name %>
-      </p>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Description</th>
+            <th>Quantity</th>
+            <th>Quantity remaining</th>
+            <th>Instructions</th>
+            <th>Event</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-      <p>
-        <strong>Description:</strong>
-        <%= @event.description %>
-      </p>
-
-      <p>
-        <strong>Date:</strong>
-        <%= @event.date %>
-      </p>
-
-      <p>
-        <strong>End:</strong>
-        <%= @event.end %>
-      </p>
-
-      <p>
-        <strong>Location:</strong>
-        <%= @event.location %>
-      </p>
-
-      <p>
-        <strong>Instructions:</strong>
-        <%= @event.instructions %>
-      </p>
-
-      <p>
-        <strong>User:</strong>
-        <%= @event.user_id %>
-      </p> -->
+        <tbody>
+          <% @my_items.each do |item| %>
+            <tr>
+              <td><%= item.name %></td>
+              <td><%= item.item_category_id %></td>
+              <td><%= item.description %></td>
+              <td><%= item.quantity %></td>
+              <td><%= item.quantity.to_i - item.quantity_requested.to_i %></td>
+              <td><%= item.instructions %></td>
+              <td><%= item.event_id %></td>
+              <td><%= link_to 'Show', event_item_path(@event, item) %></td>
+              <td><%= link_to 'Edit', edit_event_item_path(@event, item) %></td>
+              <td><%= link_to 'Destroy', event_item_path(@event, item), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
 
       <%= link_to 'Edit', edit_event_path(@event) %> |
       <%= link_to 'Back', events_path %>
