--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@item) do |f| %>
+<%= form_for([@event, @item]) do |f| %>
   <% if @item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
@@ -16,10 +16,6 @@
     <%= f.text_area :name, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :category_id %><br>
-    <%= f.number_field :category_id, class: "form-control" %>
-  </div>
-  <div class="form-group">
     <%= f.label :description %><br>
     <%= f.text_area :description, class: "form-control" %>
   </div>
@@ -28,18 +24,16 @@
     <%= f.number_field :quantity, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :quantity_remaining %><br>
-    <%= f.number_field :quantity_remaining, class: "form-control" %>
-  </div>
-  <div class="form-group">
     <%= f.label :instructions %><br>
     <%= f.text_area :instructions, class: "form-control" %>
   </div>
+
   <div class="form-group">
-    <%= f.label :event_id %><br>
-    <%= f.number_field :event_id, class: "form-control" %>
+  <%= f.label :item_category_id %><br>
+  <%= f.collection_select :item_category_id, ItemCategory.order(:name),:id, :name, include_blank: true, class: "form-control" %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
