--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing item</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
 
-<%= render 'form' %>
+			<h1>Editing item</h1>
 
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
+			<%= render 'form' %>
+
+			<%= link_to 'Show', event_item_path(@event, @item) %> |
+			<%= link_to 'Back', event_items_path %>
+
+		</div>
+	</div>
+</div>
