--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New item</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
 
-<%= render 'form' %>
+			<h1>New item</h1>
 
-<%= link_to 'Back', items_path %>
+			<%= render 'form' %>
+
+			<%= link_to 'Back', event_items_path(@event) %>
+
+		</div>
+	</div>
+</div>
