--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row"
 		<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 			<div class="navbar-header">
       			<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
@@ -28,13 +27,11 @@
 		      	</ul>
 	      	<% else %>
 		      	<ul class="nav navbar-nav navbar-right">
+		        	<li><%= link_to "My Events", events_path %></li>
 		        	<li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
 		      	</ul>
 	      	<% end %>
 	    </nav>
-
-    </div>
-
 
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
@@ -44,5 +41,6 @@
 
 <%= yield %>
 
+</div>
 </body>
 </html>
