Added a bunch of text descriptions and a link to add new items to an event

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,10 +11,9 @@
             <th>Name</th>
             <th>Description</th>
             <th>Date</th>
-            <th>End</th>
             <th>Location</th>
             <th>Instructions</th>
-            <th>User</th>
+            <th>Items Available</th>
             <th colspan="3"></th>
           </tr>
         </thead>
@@ -25,14 +24,11 @@
               <td><%= event.name %></td>
               <td><%= event.description %></td>
               <td><%= event.date %></td>
-              <td><%= event.end %></td>
               <td><%= event.location %></td>
               <td><%= event.instructions %></td>
               <td><%= event.items.count %></td>
-              <td><%= link_to 'Show', event %></td>
+              <td><%= link_to 'View Details', event %></td>
               <td><%= link_to 'Edit', edit_event_path(event) %></td>
-              <td nowrap="nowrap"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                <%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
           <% end %>
         </tbody>
