--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,13 +2,13 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 			<div class="jumbotron">
-			  <h1>Waste Less</h1>
-			  <p>Donate your wedding leftovers. </br>No hassle, much help.</p>
-			  <% if user_signed_in? == true %>	
-			  	<p><a class="btn btn-primary btn-lg" href="../events" role="button">Get Started!</a></p>
-			  <% else %>	
-			  	<p><a class="btn btn-primary btn-lg" href="../users/sign_up" role="button">Sign up now!</a></p>
-		  	  <% end %>	
+				  <h1>Waste Less</h1>
+				  <p>Donate your wedding leftovers. </br>So little effort, so much help.</p>
+				  <% if user_signed_in? == true %>	
+				  	<p><a class="btn btn-primary btn-lg" href="../events" role="button">Get Started!</a></p>
+				  <% else %>	
+				  	<p><a class="btn btn-primary btn-lg" href="../users/sign_up" role="button">Sign up now!</a></p>
+			  	  <% end %>
 			</div>
 
 		</div>
