--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,9 @@ body {
 .alert {
 	margin-bottom: 5;
 	padding: 5px;
+	color: black;
+	background-color: #BBDEFA;
+	text-align: center;
 }
 
 .home {
@@ -21,10 +24,6 @@ body {
 	text-align: center;
 }
 
-.alert {
-	background-color: #BBDEFA;
-	text-align: center;
-}
 
 .vert-offset {
 	margin-top: 100px;
@@ -36,6 +35,7 @@ body {
 	margin-right: 0px;
 	padding-left: 0px;
 	padding-right: 0px;
+	color: white;
 }
 
 .jumbotron {
@@ -53,4 +53,9 @@ body {
 	border-color: white;
 	border-style: dotted;
 	padding: 5px;
+}
+
+.navbar-brand {
+	color: white;
+	font-size: 20px;
 }
