--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,7 +2,12 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
 
-		<h1>New event</h1>
+		<h2>List Your Event Now!</h2>
+
+		<p>
+			Please give us a good description of your event, and any other details that will help our partner organizations
+			determine whether your event will be a good fit for their needs.
+		</p>
 
 		<%= render 'form' %>
 
