--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,6 +3,11 @@
 		<div class="col-md-6 col-md-offset-3">
 
 			<h1>New item</h1>
+			<p>
+				Please describe the particular item you have available, and in what quantity. If you have multiple
+				items of different types, please list them separately so that they can go to the organization that
+				is the best fit. Thanks!
+			</p>
 
 			<%= render 'form' %>
 
