--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,6 +3,7 @@
     <div class="col-md-10 col-md-offset-1">
 
 
+      <% if @user.organization == true %>
       <h1>Find an upcoming event:</h1>
 
       <table class="table">
@@ -34,9 +35,40 @@
         </tbody>
       </table>
       <br>
+      
+      <% else %>
+
+    <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Date</th>
+            <th>Location</th>
+            <th>Instructions</th>
+            <th>Items Available</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @my_events.each do |event| %>
+            <tr>
+              <td><%= event.name %></td>
+              <td><%= event.description %></td>
+              <td><%= event.date %></td>
+              <td><%= event.location %></td>
+              <td><%= event.instructions %></td>
+              <td><%= event.items.count %></td>
+              <td><%= link_to 'View Details', event %></td>
+              <td><%= link_to 'Edit', edit_event_path(event) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
 
       <%= link_to 'New Event', new_event_path %>
-
+      <% end %>
     </div>
   </div>
 </div>
